@startuml

namespace Fleemarket {
    class ProductController{
        +getProduct() : Database.ProductContext
        +getRandomProduct() : Database.ProductContext
        +newProduct() : boolean
    }
    
    ProductController --o Product
    ProductController --o Person
    
    class ConsoleView {
        print(value : string) : void
    }
    
    ProductController --* ConsoleView
    
    abstract Class Person {
        {abstract} action() : void
    }
    
    class Seller extends Person {
        +action() : void
        -newProduct() : Product
    }
    
    Seller --* ProductController
    
    class Customer extends Person {
        +action() : void
        -buyProduct() : Product
    }
    
    Customer --* ProductController
        
    Person "1" --- "0..*" Product
        
    class Product {
        name : string
        price : int
    }
    
    class PersonFactory {
        +CreateSellers(int numberOfSellers)
        +CreateCustomers(int numberOfSellers)
    }
}

@enduml
